docs(cookie-banner): add text-wrap: pretty to cookie banner content to prevent orphans

--- a/docs/assets/stylesheets/components/_cookie-banner.scss
+++ b/docs/assets/stylesheets/components/_cookie-banner.scss
@@ -4,4 +4,7 @@
     margin-left: 20px;
     margin-right: 20px;
   }
+  .govuk-cookie-banner__content {
+    text-wrap: pretty;
+  }
 }
